# hexforge-contracts

./: README.md
agents/assistant/: ENV.md  INTERFACES.md  PERMISSIONS.md
agents/auditor/: EXIT_CODES.md  INTERFACES.md  REPORTS.md  REPORT_FORMAT.md  RULES.md
docs/: CONTRACTS_INDEX.md  REPO_MAP.md
engines/glyphengine/: FILESYSTEM.md  INTERFACES.md
engines/pack/: ENV.md  FILESYSTEM.md  INTERFACES.md
engines/surface/: ENV.md  FILESYSTEM.md  INTERFACES.md
infra/paths/: CONTAINER_MOUNTS.md  HOST_PATHS.md  URL_MAP.md
libs/js/: index.js  package.json  schemas.js  validate.js
libs/python/: MANIFEST.in  pyproject.toml
libs/python/hexforge_contracts/: __init__.py  envelopes.py  paths.py  validate.py
schemas/: job_manifest.schema.json
services/backend/: ENV.md  INTERFACES.md
services/media-api/: ENV.md  INTERFACES.md
services/nginx/: ROUTES.md  SSL.md
services/ollama/: ENV.md
