[project]
name = "hexforge-contracts"
version = "1.0.4"
description = "HexForge contracts: schemas, envelopes, and validators"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21.0"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
hexforge_contracts = ["schemas/**/*.json"]

[tool.setuptools]
include-package-data = true

